--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,27 +1,27 @@
 .footer-container {
-    display: flex;
-    justify-content: space-between;
-    width: 98%;
-    padding: 10px 20px;
+    display: flex !important;
+    justify-content: space-between !important;
+    width: 98% !important; 
+    padding: 10px 20px !important;
 }
 
 .footer-left {
-    flex: 1;
+    flex: 1 !important; 
 }
 
 .footer-right {
-    display: flex;
-    gap: 15px; /* Espacement entre les icônes */
+    display: flex !important;
+    gap: 15px !important; /* Espacement entre les icônes */
 }
 
 .footer-right img {
-    width: 30px; /* Ajustez la taille des images selon vos besoins */
-    height: auto;
+    width: 30px !important; /* Ajustez la taille des images selon vos besoins */
+    height: auto !important;
 }
 
 @media (max-width: 769px){
     .footer-container{
-        flex-direction: column;
-        align-items: center;
+        flex-direction: column !important;
+        align-items: center !important;
     }
 }
