--- a/views/pages/welcome.twig
+++ b/views/pages/welcome.twig
@@ -9,9 +9,7 @@
 {% endblock %}
 
 {% block main %}
-	<div
-		id="headWelcome">
-		{# <img src="/../../assets/imgs/LogoWhiteRemoveBg.png" alt="logo Pulse connect" class="logo"> #}
+	<div id="headWelcome">
 		<div class="burger-menu" onclick="toggleMenu()">
 			<span></span>
 			<span></span>
@@ -24,20 +22,33 @@
 			</ul>
 		</nav>
 	</div>
-
-	<img id="backgroundHeader" src="/../../assets/imgs/Background.png" alt="">
-
+		<img id="backgroundHeader" src="/../../assets/imgs/Background.png" alt="image du tete avec une casquette qui porte le nom du site 'PulseConnect'">
+	</div>
 
 	<section>
 		<h2>Top Artiste</h2>
-		<div class="carousel-container">
-			<div class="carousel">
+		<div class="container">
+			<div class="faders">
+				<div class="left"></div>
+				<div class="right"></div>
+			</div>
+			<div class="items">
 				{% for user in topUsers %}
-					<div class="user-card">
-						<img src="{{ user.picture }}" alt="Photo de profil de {{ user.userName }}" class="profile-pic">
-						<div class="user-info">
-							<p class="user-name">{{ user.userName }}</p>
-						</div>
+					<div class="item">
+						<img class="img-resp" src="{{ user.picture }}" alt="Photo de {{ user.userName }}">
+						<p class="name">{{ user.userName }}</p>
+					</div>
+				{% endfor %}
+				{% for user in topUsers %}
+					<div class="item">
+						<img class="img-resp" src="{{ user.picture }}" alt="Photo de {{ user.userName }}">
+						<p class="name">{{ user.userName }}</p>
+					</div>
+				{% endfor %}
+				{% for user in topUsers %}
+					<div class="item">
+						<img class="img-resp" src="{{ user.picture }}" alt="Photo de {{ user.userName }}">
+						<p class="name">{{ user.userName }}</p>
 					</div>
 				{% endfor %}
 			</div>
@@ -45,7 +56,6 @@
 	</section>
 
 	<section id="clipWelcome">
-
 		<h2>Top clip</h2>
 		<div class="slider-container">
 			<div class="slider">
@@ -79,10 +89,19 @@
 			<button class="next" onclick="moveSlider(1)">&#10095;</button>
 		</div>
 	</section>
+
+	<section id="lottieAnimationLeft">
+		<dotlottie-player src="https://lottie.host/bb469ae7-2eea-4a64-98a4-9e382f832e51/0LHzuM66wC.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player>
+	</section>
+	<section id="lottieAnimationRight">
+		<dotlottie-player src="https://lottie.host/bb469ae7-2eea-4a64-98a4-9e382f832e51/0LHzuM66wC.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player>
+	</section>
+
 	{% include "../partials/footer.twig" %}
 
 	{% block script %}
 		<script src="/../../assets/js/welcome.js"></script>
+		<script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
 	{% endblock %}
 
 {% endblock %}
