--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -6,6 +6,7 @@ body {
     min-height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
+    transition: transform 0.2s ease;
 }
 
 .headerRes {
@@ -70,7 +71,7 @@ main {
     max-width: 600px;
     margin: auto;
     padding: 20px;
-    background-color: black; 
+    background-color: black;
 }
 
 .container ul {
@@ -79,11 +80,11 @@ main {
 }
 
 .container li {
-    background-color: #1e1e1e; 
-    border: 1px solid #3d3d3d; 
+    background-color: #1e1e1e;
+    border: 1px solid #3d3d3d;
     border-radius: 10px;
     padding: 15px;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -119,7 +120,8 @@ main {
     border-radius: 8px;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #1e1e1e; }
+    background-color: #1e1e1e;
+}
 
 .user-info {
     display: flex;
@@ -180,26 +182,28 @@ h1 {
     text-align: center;
 }
 
-.interaction{
+.interaction {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: space-around;
     gap: 10px;
 }
 
-.like-button{
+.like-button {
     color: white;
     font-weight: bold;
 }
 
-.like-section, .comment-section {
+.like-section,
+.comment-section {
     display: flex;
 }
 
-.like-button, .comment-toggle-btn {
+.like-button,
+.comment-toggle-btn {
     padding: 5px 10px;
     border: none;
-  
+
     cursor: pointer;
     border-radius: 5px;
 }
@@ -211,7 +215,7 @@ h1 {
 }
 
 .comment-toggle-btn {
-   
+
     color: rgb(255, 255, 255);
     border: none;
     margin-top: 9.5px;
@@ -251,7 +255,10 @@ h1 {
     padding: 10px 15px;
     border-radius: 5px;
     cursor: pointer;
+    display: block; /* Pour s'assurer qu'il prend toute la largeur disponible */
+    margin: 10px auto 0 auto; /* Centre horizontalement avec auto */
 }
+
 
 .comment-form button:hover {
     background-color: #0056b3;
@@ -282,43 +289,53 @@ h1 {
     cursor: pointer;
 }
 
-.like-button, .comment-toggle-btn, .share-button {
+.like-button,
+.comment-toggle-btn,
+.share-button {
     padding: 5px 10px;
     border: none;
     cursor: pointer;
-    background: none; 
-    color: white; 
+    background: none;
+    color: white;
     font-weight: bold;
     margin-top: 9.5px;
     margin-bottom: 10px;
 }
 
-.like-button, .comment-toggle-btn, .share-button {
+.like-button,
+.comment-toggle-btn,
+.share-button {
     padding: 0;
     margin: 0;
 }
 
-.like-button:focus, .comment-toggle-btn:focus, .share-button:focus {
+.like-button:focus,
+.comment-toggle-btn:focus,
+.share-button:focus {
     outline: none;
 }
 
-.like-button:hover, .comment-toggle-btn:hover, .share-button:hover {
+.like-button:hover,
+.comment-toggle-btn:hover,
+.share-button:hover {
     text-decoration: underline;
     opacity: 0.8;
 }
 
-.share-button{
-    
+.share-button {
+
     border: none;
     margin-top: 9.5px;
     padding: 5px 10px;
     margin-bottom: 10px;
     cursor: pointer;
     border-radius: 5px;
- 
+
 }
 
-.btn-share{
+.btn-share {
+    display: flex;
+    justify-content: center;
     background-color: #1e1e1e00;
     background: none;
 }
@@ -332,7 +349,7 @@ h1 {
 .share-options button {
     background: none;
     border: none;
-    
+
     cursor: pointer;
     padding: 5px;
 }
@@ -342,7 +359,7 @@ h1 {
     height: 40px;
 }
 
-.share-modal{
+.share-modal {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -350,14 +367,109 @@ h1 {
     top: 25%;
     width: 100%;
     height: 100%;
-  }
+}
 
-  .modal-content {
+.modal-content {
     background-color: #424242;
     margin: 15% auto;
     padding: 5px;
     border: 1px solid #888;
     width: 300px;
     text-align: center;
-  }
-  
+}
+
+.scroll-up-indicator::after {
+    content: '↑';
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 40px;
+    color: #000;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: 1000;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.scroll-up-indicator:hover::after {
+    opacity: 1;
+}
+
+#new-content-notification {
+    display: none;
+    position: fixed;
+    top: 10px;
+    /* Affiche le logo près du haut */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border-radius: 50px;
+}
+
+#new-content-notification.visible {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: flex;
+}
+
+
+#logoRefresh {
+    width: 30px;
+    height: 30px;
+    margin-top: 20px;
+}
+
+.copy-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.9em;
+    text-align: center;
+    z-index: 1001;
+}
+
+
+@media (max-width: 768px) {
+
+    .comments-container,
+    .share-options {
+        display: block;
+    }
+
+    .share-button {
+        display: inline-block;
+    }
+
+    .copy-message {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-size: 0.9em;
+        text-align: center;
+        z-index: 1001;
+    }
+}
