--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -17,7 +17,6 @@
 	</div>
 	<section>
 		<div class="container">
-
 			<h2>Nouveauté</h2>
 			<ul>
 				{% if contents is empty %}
@@ -85,14 +84,17 @@
 							</div>
 							<div class="share-section">
 
-								<div id="shareModal-{{ content.id }}"  style="display: none;">
+								<div id="shareModal-{{ content.id }}" style="display: none;">
 									<div class="btn-share" id="shareModal">
-										<div class="share-options" >
+										<div class="share-options">
 											<button onclick="shareOnFacebook('{{ content.id }}')"><img src="/../../assets/imgs/Facebook.png" alt="Facebook"></button>
 											<button onclick="shareOnTwitter('{{ content.id }}')"><img src="/../../assets/imgs/X.png" alt="Twitter"></button>
 											<button onclick="shareOnLinkedIn('{{ content.id }}')"><img src="/../../assets/imgs/linkedin.png" alt="LinkedIn"></button>
 											<button onclick="shareOnWhatsApp('{{ content.id }}')"><img src="/../../assets/imgs/whatsApp.png" alt="WhatsApp"></button>
-											<button onclick="copyLink('{{ content.id }}')"><img src="/../../assets/imgs/copy-link.png" alt="Copy Link"></button>
+											<button onclick="copyLink('{{ content.id }}')">
+												<img src="/../../assets/imgs/copy-link.png" alt="Copy Link">
+											</button>
+
 										</div>
 									</div>
 								</div>
