--- a/views/pages/register.twig
+++ b/views/pages/register.twig
@@ -78,7 +78,7 @@
 							<div class="modal-header">
 								<h5 class="modal-title" id="errorModalLabel">Erreur d'inscription</h5>
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
+									<span id"closeModal" aria-hidden="true">&times;</span>
 								</button>
 							</div>
 							<div class="modal-body">
