--- a/public/assets/css/projects.css
+++ b/public/assets/css/projects.css
@@ -41,6 +41,8 @@ h1 {
 }
 
 .projects-container {
+    display: flex;
+    justify-content: center;
     position: absolute;
     top: 70px;
     left: 0;
@@ -112,12 +114,12 @@ img {
     text-decoration: underline;
 }
 
-.delete {   
+.delete {
     border: none;
     border-radius: 5px;
     width: 98%;
     padding: 5px;
-    background-color: red; 
+    background-color: red;
     color: white;
 }
 
@@ -126,7 +128,8 @@ img {
 }
 
 .delete-form {
-    margin-bottom: 0; /* Supprime la marge du bas pour éviter l'espace supplémentaire */
+    margin-bottom: 0;
+    /* Supprime la marge du bas pour éviter l'espace supplémentaire */
 }
 
 .menu-dropdown {
@@ -134,7 +137,7 @@ img {
     left: 50%;
     top: 30%;
     transform: translateX(-50%);
-    background-color:#383d41;
+    background-color: #383d41;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -182,12 +185,16 @@ img {
 
 .Btn {
     display: flex;
-    align-items: center; /* Centrage vertical des éléments */
-    justify-content: center; /* Centre l'icône initialement */
-    width: 45px; /* Taille initiale du bouton circulaire */
+    align-items: center;
+    /* Centrage vertical des éléments */
+    justify-content: center;
+    /* Centre l'icône initialement */
+    width: 45px;
+    /* Taille initiale du bouton circulaire */
     height: 45px;
     border: none;
-    border-radius: 50%; /* Bouton circulaire */
+    border-radius: 50%;
+    /* Bouton circulaire */
     cursor: pointer;
     position: relative;
     overflow: hidden;
@@ -198,9 +205,12 @@ img {
 
 .sign {
     display: flex;
-    align-items: center; /* Centrage vertical de l'icône */
-    justify-content: center; /* Centrage horizontal dans l'espace alloué */
-    transition: transform 0.3s ease; /* Animation fluide pour déplacer l'icône */
+    align-items: center;
+    /* Centrage vertical de l'icône */
+    justify-content: center;
+    /* Centrage horizontal dans l'espace alloué */
+    transition: transform 0.3s ease;
+    /* Animation fluide pour déplacer l'icône */
 }
 
 .sign svg {
@@ -213,27 +223,27 @@ img {
 }
 
 .text {
-    display: none; 
-    margin-left: 10px; 
+    display: none;
+    margin-left: 10px;
     color: rgb(0, 0, 0);
     font-size: 1em;
     font-weight: 600;
-    white-space: nowrap; 
+    white-space: nowrap;
 }
 
 .Btn:hover {
-    width: 135px; 
+    width: 135px;
     border-radius: 40px;
-    justify-content: flex-start; 
+    justify-content: flex-start;
 }
 
 .Btn:hover .sign {
-    transform: translateX(0px); 
+    transform: translateX(0px);
 }
 
 .Btn:hover .text {
-    display: block; 
-    opacity: 1; 
+    display: block;
+    opacity: 1;
     margin-right: 5px;
 }
 
@@ -320,7 +330,7 @@ img {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
