--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Mogra&display=swap');
 
+html {
+    overflow: hidden;
+}
+
 body {
     background-color: black;
     display: flex;
@@ -254,13 +258,13 @@ video {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-#lottieAnimationRight{
+#lottieAnimationRight {
     position: absolute;
     top: 65%;
     left: 75%;
 }
 
-#lottieAnimationLeft{
+#lottieAnimationLeft {
     position: absolute;
     top: 65%;
     left: 5%;
@@ -323,7 +327,7 @@ video {
         margin-bottom: 40px;
     }
 
-  
+
 }
 
 @media (max-width: 768px) {
@@ -444,7 +448,8 @@ video {
         display: block;
     }
 
-    #lottieAnimationLeft,#lottieAnimationRight{
+    #lottieAnimationLeft,
+    #lottieAnimationRight {
         display: none;
     }
 }
@@ -468,32 +473,39 @@ video {
     display: flex;
     align-items: center;
     animation: infiniteCarousel 30s linear infinite;
-    width: 100%; /* Double la largeur du conteneur */
-    user-select: none; /* Empêche la sélection de texte */
+    width: 100%;
+    /* Double la largeur du conteneur */
+    user-select: none;
+    /* Empêche la sélection de texte */
 }
 
-  
-  .items > * {
+
+.items>* {
     flex-shrink: 0;
-    width: 50%; /* Chaque ensemble d'éléments occupe la moitié de la largeur */
-  }
+    width: 50%;
+    /* Chaque ensemble d'éléments occupe la moitié de la largeur */
+}
 
 .item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px; /* Taille fixe pour uniformité */
-    height: 250px; /* Taille fixe pour uniformité */
+    width: 200px;
+    /* Taille fixe pour uniformité */
+    height: 250px;
+    /* Taille fixe pour uniformité */
     margin: 1em;
     border-radius: 1em;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
-  
+
 }
 
 .img-resp {
     width: 100%;
-    height: 180px; /* Limite la taille de l’image */
-    object-fit: cover; /* Adapte l'image sans déformation */
+    height: 180px;
+    /* Limite la taille de l’image */
+    object-fit: cover;
+    /* Adapte l'image sans déformation */
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
     pointer-events: none;
@@ -533,11 +545,13 @@ video {
 }
 
 .items {
-    cursor: grab; /* Affiche une icône de main pour indiquer le glissement */
+    cursor: grab;
+    /* Affiche une icône de main pour indiquer le glissement */
 }
 
 .items.grabbing {
-    cursor: grabbing; /* Affiche une icône de main saisissante pendant le glissement */
+    cursor: grabbing;
+    /* Affiche une icône de main saisissante pendant le glissement */
 }
 
 
@@ -545,6 +559,7 @@ video {
     0% {
         transform: translateX(0);
     }
+
     100% {
         transform: translateX(-100%);
     }
@@ -553,7 +568,8 @@ video {
 .items::after {
     content: "";
     display: block;
-    width: 100%; /* Largeur permettant une boucle infinie */
+    width: 100%;
+    /* Largeur permettant une boucle infinie */
 }
 
 /* Animation ajustée pour les petits écrans */
@@ -562,6 +578,7 @@ video {
         0% {
             transform: translateX(0);
         }
+
         100% {
             transform: translateX(-100%);
         }
