--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Mogra&display=swap');
 
 html {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
